test-expected/large/foovisualanalytics/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: vanalytics
    foo.com/duversion: 2.2.58-20190925.1569390609824
    foo.com/version: 2.2.58
  labels:
    app.kubernetes.io/name: foovisualanalytics
    helm.sh/chart: foovisualanalytics-2.2.58
  name: foovisualanalytics
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: foovisualanalytics
  type: ClusterIP
