test-expected/large/foovisualanalytics/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: vanalytics
    foo.com/duversion: 2.2.58-20190925.1569390609824
    foo.com/version: 2.2.58
  labels:
    app.kubernetes.io/name: foovisualanalytics
    helm.sh/chart: foovisualanalytics-2.2.58
  name: foovisualanalytics
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOOVisualAnalytics
    - uri:
        prefix: /FOOVisualAnalytics/
    route:
    - destination:
        host: foovisualanalytics.peekay.svc.cluster.local
